tests/snapshots/cli_insta_yaml_native__sort.filter.2.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - sort
    - "-f"
    - ">0"
    - 0.1.2-rc0
    - 0.1.2-rc1
---
success: true
exit_code: 0
----- stdout -----
---
versions: {}
potentially_ambiguous: false
----- stderr -----
