tests/snapshots/cli_insta_yaml_native__sort.filter.3.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - sort
    - "-f"
    - ">a"
    - 0.1.2-rc0
    - 0.1.2-rc1
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: invalid value '>a' for '--filter <FILTER>': unexpected character 'a' while parsing major version number

For more information, try '--help'.
