tests/snapshots/cli_insta_yaml_native__sort.flatten.1.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - sort
    - "--flatten"
    - 0.1.2-rc0
    - 0.1.2-rc1
---
success: true
exit_code: 0
----- stdout -----
---
versions:
  - "0.1.2-rc0"
  - "0.1.2-rc1"
potentially_ambiguous: false
----- stderr -----
