tests/snapshots/cli_insta_yaml_native__sort.unary.1.snap
---
source: tests/cli_insta_yaml_native.rs
info:
  program: sem-tool
  args:
    - sort
    - 0.1.2-rc0
---
success: true
exit_code: 0
----- stdout -----
---
versions:
  "0.1.2-rc0":
    - "0.1.2-rc0"
potentially_ambiguous: false
----- stderr -----
